--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ workflows:
       - test:
           requires:
             - build
-      - deployment
+      - deployment:
           filters:
             branches:
               only:
